- TabbedContainer : Fixed a bug that caused an exception when the last tab in a container was closed.
- ArnoldLight : Fixed a bug that prevented OSL shaders being used with Arnold lights.
- GraphEditor : Fixed several bugs and a crash that could occur when a parent of the editor's root node was changed or deleted.

0.55.0.0
========

This release brings numerous enhancements to the Layout system, new and improved 3D nodes, performance tweaks and new tools.

> Caution : The Instancer now deletes the target point cloud from the scene (#3394). This will
> result in a behaviour change in existing scenes that rely on the target point cloud
> existing downstream of the Instancer node.

> Info : The companion patch release `0.54.2.1` includes support to allow scripts saved from
> `0.55.0.0` to be opened in environments locked to the `0.54.x.x` series. However, scripts
> saved in `0.55.0.0` that make use of multiple input connections to the Parent node are not
> compatible with any previous versions.

Features
--------

- NameSwitch : Added new node to switch between named input connections using string matching (#3349).
- CopyPrimitiveVariables : Added new node to copy primitive variables from one object to another (#3361, #3389).
- Viewer : Transform tools now feature a ‘targeted’ mode (#3403).
   - Holding <kbd>V</kbd> and clicking in the Viewer with the Translate tool active teleports the selected objects to the clicked point.
   - Holding <kbd>V</kbd> and clicking in the Viewer with the Rotate tool active aims the selection’s -z axis at the clicked point.

Improvements
------------

- Layouts (#3360, #3392, #3398, #3399) :
  - The focus state and linking of each editor is now saved with the layout.
  - All default layouts now include linked editors as standard, with all inspectors following the Viewer, and all other editors following the Graph Editor selection.
  - Viewers can now be linked to other Viewers.