@@ -18,6 +18,7 @@ Fixes
 - TabbedContainer : Fixed a bug that caused an exception when the last tab in a container was closed.
 - ArnoldLight : Fixed a bug that prevented OSL shaders being used with Arnold lights.
 - GraphEditor : Fixed several bugs and a crash that could occur when a parent of the editor's root node was changed or deleted.
+- Parent : Fixed bug which prevented loading of Parent nodes with a promoted `children` plug (#3464).
 
 0.55.0.0
 ========
